# bsopt

./: .bandit  .coverage  .coveragerc  .dockerignore  .env  .env.example  .env.production  .flake8  .gitignore  .pre-commit-config.yaml  .version.json  =96%  CODE_EXAMPLES.py  DOCKER_DEV_GUIDE.md  Dockerfile.api  Dockerfile.api.optimized  Dockerfile.jupyter  Dockerfile.jupyter.optimized  Dockerfile.mlflow  Dockerfile.worker  IMPLEMENTATION_SUMMARY.md  IV_IMPLEMENTATION_COMPLETE.md  Jenkinsfile  LATTICE_IMPLEMENTATION_SUMMARY.md  LICENSE  MLproject  Makefile  NEON_SETUP.md  OPTIMIZATION_SUMMARY.md  PICKLE_RICK_PRD.md  PRIVACY_POLICY.md  README.md  SECURITY_ANALYSIS_TODO.md  SECURITY_AUDIT_REPORT.md  SOLVER_ARCHITECTURE.txt  STATUS.md  STATUS_REPORT_WEEK_2.md  alembic.ini  automated_ml_training.py  bandit_report.txt  (+73 more)
.claude/: settings.local.json
.gemini/: settings.json
.gemini_security/: SECURITY_ANALYSIS_TODO.md
.jules/: sentinel.md
0b6592e0/: linear_ticket_0b6592e0.md  plan_2026-02-04.md  research_2026-02-04.md
26c2512b/: linear_ticket_26c2512b.md  plan_2026-02-04.md  research_2026-02-04.md
75b9a524/: linear_ticket_75b9a524.md
8cd14a65/: linear_ticket_8cd14a65.md
alembic/: env.py
benchmarks/: benchmark_implied_vol.py
certs/: jwt-private.pem  jwt-public.pem
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
database/: backup-policy.md  ha-setup.md  haproxy.cfg  patroni.yml
docker/: Dockerfile.api  Dockerfile.api-dev  Dockerfile.api.optimized  Dockerfile.auth  Dockerfile.auth-service-dev  Dockerfile.ci  Dockerfile.frontend-dev  Dockerfile.gateway  Dockerfile.ml  Dockerfile.mlflow  Dockerfile.neural-pricing  Dockerfile.neural-pricing-dev  Dockerfile.postgres  Dockerfile.ray  Dockerfile.scraper  Dockerfile.scraper-dev  Dockerfile.wasm  Dockerfile.worker  Dockerfile.worker-dev
docs/: ACCOUNTING_STANDARDS_COMPLIANCE.md  AGENT_RESUMPTION_GUIDE.md  API_TUTORIAL.md  ARCHITECTURE.md  AUTH_IMPLEMENTATION_SUMMARY.md  AUTH_SETUP.md  BLACK_SCHOLES_MATHEMATICAL_SPECIFICATION.md  BURNDOWN_DATA.json  CLI_DOCUMENTATION.md  CLI_FILES_INDEX.md  CLI_IMPLEMENTATION_SUMMARY.md  CLI_QUICKSTART.md  CLI_QUICK_REFERENCE.md  CLI_README.md  CLOUD_COST_ANALYSIS.md  COMPLIANCE_AUDIT_REPORT.md  CONTRIBUTING.md  CRANK_NICOLSON_DOCUMENTATION.md  DATABASE_MODELS_SUMMARY.md  DEPENDENCY_REPORT.md  DESIGN_SYSTEM.md  DISCREPANCY_REPORT.md  DOCKER_BEST_PRACTICES.md  EXECUTIVE_SUMMARY.md  EXOTIC_OPTIONS.md  FDM_QUICK_REFERENCE.md  FINAL_CLI_SUMMARY.txt  FINANCIAL_VALIDATION_REPORT.md  FINITE_DIFFERENCE_README.md  FRONTEND_INTEGRATION.md  GETTING_STARTED.md  IMPLIED_VOLATILITY.md  LATTICE_MODELS.md  LATTICE_QUICKSTART.md  MATHEMATICAL_METHODS.md  MONTE_CARLO_IMPLEMENTATION.md  NUMERICAL_EXAMPLE.md  PRODUCT_ROADMAP.md  PRODUCT_STRATEGY.md  QUICK_REFERENCE.md  (+8 more)
examples/: exotic_options_quickstart.py  lattice_examples.py  monte_carlo_example.py
frontend/: .dockerignore  .env.example  Dockerfile.dev  Dockerfile.prod  README.md  bundle-analysis.html  default.conf  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
init-scripts/: 00-core-schema.sql  01-audit-schema.sql  02-market-mesh-enhancements.sql  03-partition-by-expiry.sql  04-timescale-hypertables.sql  05-materialized-views.sql  05-optimize-indices.sql  07-market-stats-mv.sql  08-continuous-aggregates.sql  08-continuous-aggregates.sql.disabled  09-portfolio-summary-mv.sql  10-trading-stats-mv.sql  11-drift-metrics-mv.sql  12-log-hypertables.sql  13-optimized-aggregates.sql  13-optimized-aggregates.sql.disabled  14-optimize-vitals.sql  99-neon-migration.sql
migrations/: env.py
models/: itm_classifier_final.pth  model_epoch_10.pth  model_epoch_2.pth  model_epoch_4.pth  model_epoch_6.pth  model_epoch_8.pth
performance/: caching_strategy.py  database_optimization.sql  grafana_dashboard.json  monitoring.py  optimization_report.md  optimized_pricing.py
protos/: inference.proto  market_data.proto
results/: results.json
schemas/: mlflow_log_schema.json
scripts/: benchmark_producer.py  benchmark_quantum_pricing.py  build_protos.sh  convert_model_to_onnx.py  convert_tests.py  create_shm.py  deploy_db_updates.sh  deploy_full_db.sh  dev-setup.sh  enforce_venv.py  export_model_to_onnx.py  find_nse_api.py  generate_certs.sh  load_xdp_filter.sh  optimize_kernel.sh  register_market_data_schema.py  register_schema.py  run_load_test.sh  setup_ksqldb.py  setup_pki.sh  test_agent_integration.py  test_pandas_parse.py  test_scraper_current.py  test_yaml.py  validate_imports.py  verify_god_mode.py  verify_hybrid_pricer.py  verify_kafka_health.py  verify_ml_metrics.py  verify_oauth.py  (+6 more)
src/wasm/: Cargo.toml
src/wasm/src/: lib.rs  simd_math.rs
(+7376 files in other folders)
