[project]
name = "bsopt"
version = "0.1.0"
description = "Black-Scholes Optimization & ML Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "optuna>=4.6.0",
    "xgboost>=3.1.2",
    "mlflow>=3.8.1",
    "prometheus-client>=0.23.1",
    "structlog>=25.5.0",
    "scikit-learn>=1.8.0",
    "pandas>=2.3.3",
    "numpy>=2.4.0",
    "requests>=2.32.5",
    "SQLAlchemy>=2.0.45",
    "minio>=7.2.9",
    "torch>=2.5.1",
    "matplotlib>=3.10.0",
    "celery>=5.4.0",
    "redis>=5.2.0",
    "psycopg2-binary>=2.9.9",
    "confluent-kafka>=2.3.0",
    "faust-streaming>=0.11.0",
    "pytest-asyncio>=0.23.0",
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "fastavro>=1.9.0",
    "uvloop>=0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]

asyncio_mode = "auto"

filterwarnings = [

    "ignore::DeprecationWarning:mode.*",

]
