[project]
name = "bsopt"
version = "2.5.0"
description = "The God-Mode Financial Manifold for Transdimensional Derivative Pricing"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
    "numba>=0.60.0",
    "structlog>=24.1.0",
    "orjson>=3.10.0",
    "msgspec>=0.18.0",
    "ray[default]>=2.30.0",
    "redis>=5.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx[http2]>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
]
ml = [
    "xgboost>=2.0.0",
    "scikit-learn>=1.5.0",
    "mlflow>=2.13.0",
    "optuna>=3.6.0",
    "ray[tune]>=2.30.0",
    "qiskit>=1.1.0",
    "qiskit-aer-gpu>=0.14.0",
]
cli = [
    "click>=8.1.0",
    "rich>=13.7.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.6.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pip-audit>=2.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I", "N", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
