[package]
name = "bsopt-wasm"
version = "0.1.0"
edition = "2024"
authors = ["Kamau"]
description = "High-performance financial pricing engine for BS-Opt"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
statrs = "0.18"
js-sys = "0.3.83"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
# Optimize for small binary size
opt-level = "s"
lto = true