[package]
name = "bsopt-wasm"
version = "0.1.0"
edition = "2024"
authors = ["Kamau"]
description = "High-performance financial pricing engine for BS-Opt"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.100", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6", optional = true }
statrs = "0.18"
rand = "0.9"
js-sys = { version = "0.3.83", optional = true }
nalgebra = { version = "0.33", features = ["serde-serialize"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
rand_distr = "0.5.1"

[features]
default = ["js"]
js = ["wasm-bindgen", "serde-wasm-bindgen", "js-sys"]

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-simd", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
